--- a/i3/i3.conf
+++ b/i3/i3.conf
@@ -110,9 +110,10 @@ bindsym Control+Mod1+u       exec --no-startup-id ~/bin/winston-utils
 bindsym Shift+space  	     exec --no-startup-id i3-dmenu-desktop 
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
-bindsym $mod+Shift+t exec i3-sensible-terminal
+bindsym XF86AudioMute        exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
+bindsym XF86AudioMicMute     exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+bindsym $mod+d               exec --no-startup-id termite -t 'fzf-menu' -e 'i3-dmenu-desktop --dmenu="~/.fzf/bin/fzf --reverse"' 
+for_window [title="fzf-menu"] floating enable && floating toggle
 # }}}
 
 # MODES {{{
