--- a/config/i3/i3.conf
+++ b/config/i3/i3.conf
@@ -1,4 +1,4 @@
-# i3 config file (v4)
+# i3 config file (v4){{{}}}
 # vim: fdm=marker ft=i3config
 
 # SETTING VARS {{{
@@ -6,16 +6,16 @@ set $Up k
 set $Left h
 set $Right l
 set $Down j
-set $workspace1 "1:1"
-set $workspace2 "2:2"
-set $workspace3 "3:3"
-set $workspace4 "4:4"
-set $workspace5 "5:5"
-set $workspace6 "6:6"
-set $workspace7 "7:7"
-set $workspace8 "8:8"
-set $workspace9 "9:9"
-set $workspace10  "10:10"
+set $workspace1 "1"
+set $workspace2 "2"
+set $workspace3 "3"
+set $workspace4 "4"
+set $workspace5 "5"
+set $workspace6 "6"
+set $workspace7 "7"
+set $workspace8 "8"
+set $workspace9 "9"
+set $workspace10  "10"
 # }}}
 
 # INITIAL SETTINGS {{{
@@ -81,23 +81,23 @@ bindsym $mod+shift+a focus child
 
 # THEMING {{{
 font pango:Inconsolata 8
-bindsym $mod+Shift+d exec --no-startup-id $HOME/bin/unsplash
-bindsym $mod+Shift+t exec --no-startup-id $HOME/bin/i3-tray-toggle
-bar {
-    position top
-    # tray_output none
-    status_command i3blocks
-    font pango:Inconsolata 13
-    strip_workspace_numbers yes
-}
+bindsym $mod+Shift+d exec --no-startup-id wallpaper
+#bar {
+#    position top
+#    # tray_output none
+#    status_command i3blocks
+#    font pango:Inconsolata 13
+#    strip_workspace_numbers yes
+#}
+
+exec_always --no-startup-id /home/stefano/.config/polybar/launch.sh
 
 ## Wallpaper
-exec_always --no-startup-id feh --bg-scale $HOME/img.png
+exec_always --no-startup-id feh --bg-scale /home/stefano/Immagini/.img
 # }}}
 
 # CLASSES AND WINDOW-SPECIFIC SETTINGS {{{
 assign [class = "Telegram"] $workspace9
-for_window [class = "Spotify"] move to workspace $workspace10
 # }}}
 
 # BINDINGS {{{
@@ -107,28 +107,21 @@ bindsym Control+Mod1+l       exec --no-startup-id xdg-open \"$(fdfind | dmenu -i
 bindsym Control+Mod1+p       exec --no-startup-id ~/bin/winston-pass
 bindsym Control+Mod1+t       exec --no-startup-id urxvt
 bindsym Control+Mod1+u       exec --no-startup-id ~/bin/winston-utils
-bindsym Shift+space  	     exec --no-startup-id i3-dmenu-desktop 
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
 bindsym XF86AudioMute        exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute     exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
-bindsym $mod+d               exec --no-startup-id termite -t 'fzf-menu' -e 'i3-dmenu-desktop --dmenu="~/.fzf/bin/fzf --reverse"' 
-for_window [title="fzf-menu"] floating enable && floating toggle
+bindsym $mod+d               exec --no-startup-id rofi -show drun -sort
+bindsym Shift+Return         exec i3-sensible-terminal
+bindsym $mod+Delete          exec ~/.config/rofi/scripts/powermenu.sh
+bindsym $mod+p               exec ~/.config/rofi/scripts/rofi-pass
+
+# --dmenu="~/.fzf/bin/fzf --reverse"' 
+# for_window [title="pass-menu"] floating enable
 # }}}
 
 # MODES {{{
-set $sysmenu "Exit - Halt - Reboot - Suspend - Lock"
-bindsym $mod+Delete mode $sysmenu
-mode $sysmenu {
-	bindsym r         restart
-	bindsym e         exec --no-startup-id i3-nagbar -t warning -m 'Logout?' -b 'y' 'i3-msg exit' 
-	bindsym h         exec --no-startup-id systemctl poweroff
-	bindsym b         exec --no-startup-id systemctl reboot
-	bindsym s         exec --no-startup-id i3lock-fancy && i3 mode default && systemctl suspend
-	bindsym l         exec --no-startup-id i3lock-fancy && i3 mode default
-	bindsym Return    mode "default"
-	bindsym Escape    mode "default"
-}
+
 bindsym $mod+r mode "resize"
 mode "resize" {
 	bindsym $Left resize shrink width 2 px or 2 ppt
@@ -145,7 +138,7 @@ mode "resize" {
 set $monitor "Edpi1 - Hdmi1 - Clonato - Doppio - Sinistra/Destra (r/R)"
 bindsym $mod+m mode $monitor
 mode $monitor {
-	bindsym Escape mode "default"
+	bindsym Escape  "default"
 	bindsym c exec --no-startup-id $HOME/Dotfiles/script/bin/monitor/clonato.sh; mode "default"
 	bindsym d exec --no-startup-id $HOME/Dotfiles/script/bin/monitor/destra.sh; mode "default"
 	bindsym r exec --no-startup-id $HOME/Dotfiles/script/bin/monitor/ruotato-sinistra.sh; mode "default"
@@ -158,11 +151,5 @@ mode $monitor {
 
 # AUTOSTART APPLICATIONS {{{
 exec_always --no-startup-id xmodmap ~/.Xmodmap
-exec --no-startup-id compton -b
-exec --no-startup-id xfce4-power-manager
-exec --no-startup-id nm-applet
-exec --no-startup-id owncloud
-exec --no-startup-id dropbox start
-exec --no-startup-id killall gnome-keyring-daemon
 # vim: fdm=marker
 # }}}D
