More completed installation

--- a/config/polybar/tester.ini
+++ b/config/polybar/tester.ini
@@ -137,7 +137,7 @@ font-1 = "waffle:size=12;2"
 
 ; Modules are added to one of the available blocks
 ;   modules-left = cpu ram
-;   modules-center = xwindow xbacklight
+;   modules-center = xwindow backlight
 ;   modules-right = ipc clock
 
 ;; Available modules
