--- a/config/i3/config
+++ b/config/i3/config
@@ -111,6 +111,12 @@ bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
 bindsym XF86AudioMute        exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute     exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+bindsym XF86AudioPlay        exec playerctl play-pause
+bindsym XF86AudioPause       exec playerctl play-pause
+bindsym XF86AudioNext        exec playerctl next
+bindsym XF86AudioPrevious    exec playerctl previous
+bindsym XF86MonBrightnessUp  exec xbacklight -inc 20 
+bindsym XF86MonBrightnessDown exec xbacklight -dec 20
 bindsym $mod+d               exec --no-startup-id rofi -show drun -sort
 bindsym Shift+Return         exec i3-sensible-terminal
 bindsym $mod+Delete          exec ~/.config/rofi/scripts/powermenu.sh
@@ -151,5 +157,6 @@ mode $monitor {
 
 # AUTOSTART APPLICATIONS {{{
 exec_always --no-startup-id xmodmap ~/.Xmodmap
+exec_always --no-startup-id ~/.config/polybar/launch.sh
 # vim: fdm=marker
 # }}}D
