--- a/config/polybar/bars.ini
+++ b/config/polybar/bars.ini
@@ -110,7 +110,7 @@ ramp-headphones-1 = 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/brightness]
-type = internal/xbacklight
+type = internal/backlight
 
 ; Use the following command to list available cards:
 ; $ ls -1 /sys/class/backlight/
@@ -173,7 +173,7 @@ full-at = 99
 
 ; Use the following command to list batteries and adapters:
 ; $ ls -1 /sys/class/power_supply/
-battery = BAT1
+battery = BAT0
 adapter = ACAD
 
 ; If an inotify event haven't been reported in this many
