--- a/config/polybar/modules.ini
+++ b/config/polybar/modules.ini
@@ -91,7 +91,7 @@ ramp-headphones-1 = 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/backlight]
-type = internal/xbacklight
+type = internal/backlight
 
 ; Use the following command to list available cards:
 ; $ ls -1 /sys/class/backlight/
@@ -135,7 +135,7 @@ full-at = 99
 
 ; Use the following command to list batteries and adapters:
 ; $ ls -1 /sys/class/power_supply/
-battery = BAT1
+battery = BAT0
 adapter = ACAD
 
 ; If an inotify event haven't been reported in this many
@@ -513,119 +513,119 @@ label = %notifications%
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-;;[module/i3]
-;;type = internal/i3
-
-; Only show workspaces defined on the same output as the bar
+;[module/i3]
+;type = internal/i3
 ;
-; Useful if you want to show monitor specific workspaces
-; on different bars
+;; Only show workspaces defined on the same output as the bar
+;;
+;; Useful if you want to show monitor specific workspaces
+;; on different bars
+;;
+;; Default: false
+;pin-workspaces = true
 ;
-; Default: false
-;;pin-workspaces = true
-
-; This will split the workspace name on ':'
-; Default: false
-;;strip-wsnumbers = true
-
-; Sort the workspaces by index instead of the default
-; sorting that groups the workspaces by output
-; Default: false
-;;index-sort = true
-
-; Create click handler used to focus workspace
-; Default: true
-;;enable-click = false
-
-; Create scroll handlers used to cycle workspaces
-; Default: true
-;;enable-scroll = false
-
-; Wrap around when reaching the first/last workspace
-; Default: true
-;;wrapping-scroll = false
-
-; Set the scroll cycle direction 
-; Default: true
-;;reverse-scroll = false
-
-; Use fuzzy (partial) matching on labels when assigning 
-; icons to workspaces
-; Example: code;♚ will apply the icon to all workspaces 
-; containing 'code' in the label
-; Default: false
-;;fuzzy-match = true
-
-; ws-icon-[0-9]+ = label;icon
-; NOTE: The label needs to match the name of the i3 workspace
-;;ws-icon-0 = 1;♚
-;;ws-icon-1 = 2;♛
-;;ws-icon-2 = 3;♜
-;;ws-icon-3 = 4;♝
-;;ws-icon-4 = 5;♞
-;;ws-icon-default = ♟
-; NOTE: You cannot skip icons, e.g. to get a ws-icon-6
-; you must also define a ws-icon-5.
-
-; Available tags:
-;   <label-state> (default) - gets replaced with <label-(focused|unfocused|visible|urgent)>
-;   <label-mode> (default)
-;;format = <label-state> <label-mode>
-
-; Available tokens:
-;   %mode%
-; Default: %mode%
-;;label-mode = %mode%
-;;label-mode-padding = 2
-;;label-mode-background = #e60053
-
-; Available tokens:
-;   %name%
-;   %icon%
-;   %index%
-;   %output%
-; Default: %icon%  %name%
-;;label-focused = %index%
-;;label-focused-foreground = #ffffff
-;;label-focused-background = #3f3f3f
-;;label-focused-underline = #fba922
-;;label-focused-padding = 4
-
-; Available tokens:
-;   %name%
-;   %icon%
-;   %index%
-;   %output%
-; Default: %icon%  %name%
-;;label-unfocused = %index%
-;;label-unfocused-padding = 4
-
-; Available tokens:
-;   %name%
-;   %icon%
-;   %index%
-;   %output%
-; Default: %icon%  %name%
-;;label-visible = %index%
-;;label-visible-underline = #555555
-;;label-visible-padding = 4
-
-; Available tokens:
-;   %name%
-;   %icon%
-;   %index%
-;   %output%
-; Default: %icon%  %name%
-;;label-urgent = %index%
-;;label-urgent-foreground = #000000
-;;label-urgent-background = #bd2c40
-;;label-urgent-padding = 4
-
-; Separator in between workspaces
-;;label-separator = |
-;;label-separator-padding = 2
-;;label-separator-foreground = #ffb52a
-
+;; This will split the workspace name on ':'
+;; Default: false
+;strip-wsnumbers = true
+;
+;; Sort the workspaces by index instead of the default
+;; sorting that groups the workspaces by output
+;; Default: false
+;index-sort = true
+;
+;; Create click handler used to focus workspace
+;; Default: true
+;enable-click = false
+;
+;; Create scroll handlers used to cycle workspaces
+;; Default: true
+;enable-scroll = false
+;
+;; Wrap around when reaching the first/last workspace
+;; Default: true
+;wrapping-scroll = false
+;
+;; Set the scroll cycle direction 
+;; Default: true
+;reverse-scroll = false
+;
+;; Use fuzzy (partial) matching on labels when assigning 
+;; icons to workspaces
+;; Example: code;♚ will apply the icon to all workspaces 
+;; containing 'code' in the label
+;; Default: false
+;fuzzy-match = true
+;
+;; ws-icon-[0-9]+ = label;icon
+;;NOTE: The label needs to match the name of the i3 workspace
+;ws-icon-0 = 1;♚
+;ws-icon-1 = 2;♛
+;ws-icon-2 = 3;♜
+;ws-icon-3 = 4;♝
+;ws-icon-4 = 5;♞
+;ws-icon-default = ♟
+;; NOTE: You cannot skip icons, e.g. to get a ws-icon-6
+;; you must also define a ws-icon-5.
+;
+;; Available tags:
+;;   <label-state> (default) - gets replaced with <label-(focused|unfocused|visible|urgent)>
+;;   <label-mode> (default)
+;format = <label-state> <label-mode>
+;
+;; Available tokens:
+;;   %mode%
+;; Default: %mode%
+;label-mode = %mode%
+;label-mode-padding = 2
+;label-mode-background = #e60053
+;
+;; Available tokens:
+;;   %name%
+;;   %icon%
+;;   %index%
+;;   %output%
+;; Default: %icon%  %name%
+;label-focused = %index%
+;label-focused-foreground = #ffffff
+;label-focused-background = #3f3f3f
+;label-focused-underline = #fba922
+;label-focused-padding = 4
+;
+;; Available tokens:
+;;   %name%
+;;   %icon%
+;;   %index%
+;;   %output%
+;; Default: %icon%  %name%
+;label-unfocused = %index%
+;label-unfocused-padding = 4
+;
+;; Available tokens:
+;;   %name%
+;;   %icon%
+;;   %index%
+;;   %output%
+;; Default: %icon%  %name%
+;label-visible = %index%
+;label-visible-underline = #555555
+;label-visible-padding = 4
+;
+;; Available tokens:
+;;   %name%
+;;   %icon%
+;;   %index%
+;;   %output%
+;; Default: %icon%  %name%
+;label-urgent = %index%
+;label-urgent-foreground = #000000
+;label-urgent-background = #bd2c40
+;label-urgent-padding = 4
+;
+;; Separator in between workspaces
+;label-separator = |
+;label-separator-padding = 2
+;label-separator-foreground = #ffb52a
+;
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/memory]
@@ -805,7 +805,7 @@ interface = wlp3s0
 ; Normal Module
 [module/network]
 type = internal/network
-interface = wlan0
+interface = wlp2s0
 
 ; Seconds to sleep between updates
 ; Default: 1
