--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,6 +1,7 @@
 {
-  "suggest.noselect": false,
+  "suggest.noselect": true,
   "coc.preferences.formatOnSaveFiletypes": [
+    "php",
     "javascript",
     "typescript",
     "typescriptreact",
@@ -8,5 +9,15 @@
     "javascriptreact",
     "typescript.tsx",
     "graphql"
-  ]
+  ],
+  "explorer.icon.enableNerdfont": true,
+  "git.addedSign.hlGroup": "GitGutterAdd",
+  "git.changedSign.hlGroup": "GitGutterChange",
+  "git.removedSign.hlGroup": "GitGutterDelete",
+  "git.topRemovedSign.hlGroup": "GitGutterDelete",
+  "git.changeRemovedSign.hlGroup": "GitGutterChangeDelete",
+  "markdownlint.config": {
+    "default": true,
+    "line_length": false
+  }
 }
